tests/ui/pattern/non-structural-match-types.stderr
error: `{closure@$DIR/non-structural-match-types.rs:10:17: 10:19}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:10:9
   |
LL |         const { || {} } => {}
   |         ^^^^^^^^^^^^^^^

error: `{async block@$DIR/non-structural-match-types.rs:13:17: 13:25}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:13:9
   |
LL |         const { async {} } => {}
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

